--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,7 @@ authors = [
     { name = "Matteo", email = "me@mattbit.com" }
 ]
 requires-python = ">=3.10"
-dependencies = [
-    "pydantic>=2.11.7",
-]
+dependencies = []
 
 [project.optional-dependencies]
 dev = ["pytest", "pytest-asyncio"]
