Update renovate config

--- a/renovate.json
+++ b/renovate.json
@@ -21,6 +21,12 @@
             "matchPackageNames": [
                 "*"
             ]
+        },
+        {
+            "matchPackageNames": [
+                "python"
+            ],
+            "enabled": false
         }
     ]
 }
