--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,27 @@ readme = "README.md"
 authors = [
     { name = "Matteo", email = "me@mattbit.com" }
 ]
+license = {file = "LICENSE"}
+keywords = ["async", "streaming", "pipeline", "concurrency", "data-processing", "asyncio", "functional"]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: System :: Distributed Computing",
+    "Typing :: Typed"
+]
+urls = {
+    Homepage = "https://github.com/Giskard-AI/relais",
+    Repository = "https://github.com/Giskard-AI/relais",
+    Issues = "https://github.com/Giskard-AI/relais/issues",
+    Changelog = "https://github.com/Giskard-AI/relais/blob/main/CHANGELOG.md"
+}
 requires-python = ">=3.10"
 dependencies = []
 
