--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,14 +21,14 @@ classifiers = [
     "Topic :: System :: Distributed Computing",
     "Typing :: Typed"
 ]
-urls = {
-    Homepage = "https://github.com/Giskard-AI/relais",
-    Repository = "https://github.com/Giskard-AI/relais",
-    Issues = "https://github.com/Giskard-AI/relais/issues",
-    Changelog = "https://github.com/Giskard-AI/relais/blob/main/CHANGELOG.md"
-}
 requires-python = ">=3.10"
 dependencies = []
+
+[project.urls]
+Homepage = "https://github.com/Giskard-AI/relais"
+Repository = "https://github.com/Giskard-AI/relais"
+Issues = "https://github.com/Giskard-AI/relais/issues"
+Changelog = "https://github.com/Giskard-AI/relais/blob/main/CHANGELOG.md"
 
 [project.optional-dependencies]
 dev = ["pytest", "pytest-asyncio"]
