--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,8 +60,15 @@ addopts = [
 ]
 
 [tool.ruff.lint]
-select = ["E", "W", "I"]
-ignore = ["E501"]
+# D = pydocstyle
+# I = isort
+# E, W = error/warning pycodestyle (E, W)
+select = ["E", "W", "I", "D"]
+ignore = ["E501"]  # E501	line-too-long	Line too long ({width} > {limit})
+
+[tool.ruff.lint.per-file-ignores]
+"tests/**/*.py" = ["D"]
+"examples/**/*.py" = ["D"]
 
 [tool.pyright]
 failOnWarnings = false
@@ -79,6 +86,3 @@ packages = ["src/relais"]
 
 [tool.hatch.build.targets.wheel.force-include]
 "src/relais/py.typed" = "relais/py.typed"
-
-[tool.hatch.build.targets.sdist]
-include = ["src/relais/py.typed"]
