--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,18 +30,18 @@ Repository = "https://github.com/Giskard-AI/relais"
 Issues = "https://github.com/Giskard-AI/relais/issues"
 Changelog = "https://github.com/Giskard-AI/relais/blob/main/CHANGELOG.md"
 
-[project.optional-dependencies]
+[dependency-groups]
 dev = [
-    "basedpyright~=1.31.0",
-    "detect-secrets~=1.5.0",
-    "ipykernel~=6.30.0",
-    "pip-audit~=2.9.0",
-    "pre-commit~=4.2.0",
-    "pytest~=8.4.1",
-    "pytest-asyncio~=1.1.0",
-    "pytest-cov~=5.0.0",
-    "ruff~=0.12.5",
-    "vermin~=1.6.0",
+    "basedpyright==1.31.0",
+    "detect-secrets==1.5.0",
+    "ipykernel==6.30.0",
+    "pip-audit==2.9.0",
+    "pre-commit==4.2.0",
+    "pytest==8.4.1",
+    "pytest-asyncio==1.1.0",
+    "pytest-cov==5.0.0",
+    "ruff==0.12.5",
+    "vermin==1.6.0",
 ]
 
 [build-system]
