--- a/renovate.json
+++ b/renovate.json
@@ -13,6 +13,12 @@
   ],
   "packageRules": [
       {
+          "rangeStrategy": "widen",
+          "matchManagers": [
+              "pep621"
+          ]
+      },
+      {
           "groupName": "{{manager}} dependencies",
           "groupSlug": "{{manager}}-deps",
           "matchUpdateTypes": [
