--- a/renovate.json
+++ b/renovate.json
@@ -1,32 +1,28 @@
 {
-  "schedule": [
-      "before 4am on Monday"
-  ],
-  "labels": [
-      "dependencies"
-  ],
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-      "config:recommended",
-      "helpers:pinGitHubActionDigests",
-      ":pinOnlyDevDependencies"
-  ],
-  "packageRules": [
-      {
-          "groupName": "{{manager}} dependencies",
-          "groupSlug": "{{manager}}-deps",
-          "matchUpdateTypes": [
-              "*"
-          ],
-          "matchPackageNames": [
-              "*"
+    "schedule": [
+       "before 4am on Monday"
+    ],
+    "labels": [
+       "dependencies"
+    ],
+    "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+    "extends": [
+       "config:recommended",
+       "helpers:pinGitHubActionDigests",
+       ":pinOnlyDevDependencies"
+    ],
+    "packageRules": [
+       {
+          "rangeStrategy": "widen",
+          "matchManagers": [
+             "pep621"
           ]
-      },
-      {
+       },
+       {
           "matchPackageNames": [
-              "python"
+             "python"
           ],
           "enabled": false
-      }
-  ]
-}
+       }
+    ]
+ }
