--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -20,8 +20,10 @@ jobs:
 
     steps:
       - name: Validate version format
+        env:
+          VERSION_INPUT: ${{ inputs.version }}
         run: |
-          if [[ ! "${{ inputs.version }}" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+          if [[ ! "$VERSION_INPUT" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
             echo "Invalid version format. Use X.Y.Z"
             exit 1
           fi
@@ -52,8 +54,10 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Prepare version env
+        env:
+          VERSION_INPUT: ${{ inputs.version }}
         run: |
-          VERSION_NAME="v${{ inputs.version }}"
+          VERSION_NAME="v${VERSION_INPUT}"
           VERSION_NUMBER="${VERSION_NAME:1}"
           echo "VERSION_NUMBER=${VERSION_NUMBER}" >> $GITHUB_ENV
           echo "VERSION_NAME=${VERSION_NAME}" >> $GITHUB_ENV
